Improve some features

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
 }
 
 #grid {
-    background-color: darkgrey;
+    background-color: whitesmoke;
     flex-grow: 1;
     height:560px;
     width: 660px;
@@ -39,8 +39,6 @@ header {
     outline: 2px solid #000;
     font-size:0px;
     display: grid;
-    background-color: var(--secondary-light);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 
 .settings {
